modules/security_groups/main.tf
resource "aws_security_group" "sg_all_instances" {
  name        = "sg_ssh_ping_access"
  description = "Allow SSH and ICMP traffic."
  vpc_id      = var.vpc_id

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.private_ip]
  }

  ingress {
    description = "Ping access"
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = [var.private_ip]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }



  tags = var.tags
}

resource "aws_security_group" "sg_public_instances" {
  name        = "sg_public"
  description = "Allow public inbound traffic."
  vpc_id      = var.vpc_id

  ingress {
    description = "Allow https from internet."
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow http from internet."
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = var.tags
}

resource "aws_security_group" "sg_private_instances" {
  name        = "sg_private"
  description = "Allow traffic from public subnet."
  vpc_id      = var.vpc_id

  ingress {
    description = "Allow https from public subnet."
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = var.public_subnet_cidr_blocks
  }

  ingress {
    description = "Allow http from public subnet."
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.public_subnet_cidr_blocks
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "tcp"
    cidr_blocks = var.public_subnet_cidr_blocks
  }

  tags = var.tags
}
